# anytime-valid-conjoint

./: .dockerignore  .gitignore  Dockerfile  README.md  amce_simulation.R  cj.R  figure_1.R  figure_2_simulations.R  figure_3_6_simulations.R  figure_4.R  figure_4_simulations.R  figure_5_simulations.R  main.sh  power.R  pyproject.toml  rct_simulation.R  rct_simulation.py
.binder/: Dockerfile
code/: cj.R  docker.R  figure_1.R  figure_2.R  figure_2_simulations.R  figure_3_6.R  figure_3_6_simulations.R  figure_4.R  figure_4_simulations.R  figure_5.R  figure_5_simulations.R  install_dependencies.R
data/: .gitignore  figure2.csv  figure4.fst  figure_3_6_efficiency.fst
src/anytime_valid_conjoint/: simulation.R  utils.R
